Primitive @Input: example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<myapp-child1 [AliasInput]="ParentInput"
+<myapp-child1 [AliasInput]="ParentInput" [primitiveInput]="primitiveParent"
     (updateParentEvent)="parentCatchUpdate($event)"
 ></myapp-child1>
 
